feat: initial setup of website

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 ---
-layout: home
-# Index page
+layout: page
+title: Welcome
 ---
+
+<p>Hello, my name is Andrew. I'm an IT Engineer from Australia, and I'm enthusiastic about open data, contributing to both OpenStreetMap and MusicBrainz.</p>
